@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Apr 2009; evadim <evadim@evadim.ru> image-viewer-9999.ebuild:
+  USE: +experimental +ethumb
+
   16 Apr 2009; evadim <evadim@evadim.ru>
   media-gfx/image-viewer/image-viewer-9999.ebuild:
   add media-libs/ethumb to deps, still broken
